--- a/tasks/k8s-services.yml
+++ b/tasks/k8s-services.yml
@@ -14,16 +14,34 @@
   register: kube_apply_result
   changed_when: "'created' in kube_apply_result.stdout"
   run_once: True
+  delegate_to: "{{ groups.dramble[0] }}"
 
-- name: Clone the metrics-server project from GitHub.
-  git:
-    repo: https://github.com/kubernetes-incubator/metrics-server.git
+- name: Ensure metrics-server directory exists.
+  file:
+    path: "~/metrics-server"
+    state: directory
+
+- name: Download the metrics-server project from GitHub.
+  unarchive:
+    src: https://github.com/kubernetes-incubator/metrics-server/archive/master.tar.gz
     dest: "~/metrics-server"
-    version: master
-    update: no
-    depth: 1
-  register: metrics_server_clone
+    remote_src: yes
+    extra_opts: [ "--strip-components=1" ]
+    creates: "~/metrics-server/README.md"
+  register: metrics_server_download
+  run_once: True
+  delegate_to: "{{ groups.dramble[0] }}"
+
+- name: Overwrite metrics-server deployment manifest for ARM processor.
+  copy:
+    src: files/manifests/kube-system/metrics-server-deployment-arm.yaml
+    dest: "~/metrics-server/deploy/1.8+/metrics-server-deployment.yaml"
+  when: deploy_target == 'pi'
+  run_once: True
+  delegate_to: "{{ groups.dramble[0] }}"
 
 - name: Apply metrics-server services to the cluster.
   command: kubectl create -f ~/metrics-server/deploy/1.8+/
-  when: metrics_server_clone is changed
+  when: metrics_server_download is changed
+  run_once: True
+  delegate_to: "{{ groups.dramble[0] }}"
