--- a/tasks/test-setup.yml
+++ b/tasks/test-setup.yml
@@ -11,7 +11,9 @@
 - name: Override vars for non-ARM test environments.
   set_fact:
     docker_version: 18.04.0~ce~3-0~debian
+    drupal8_docker_image: geerlingguy/drupal:latest
     mysql_container_image: 'mysql:5.7'
+    docker_registry_image: registry:2
     default_http_backend_image: 'k8s.gcr.io/defaultbackend:1.0'
   when: deploy_target != 'pi'
 
