--- a/main.yml
+++ b/main.yml
@@ -11,10 +11,11 @@
       when: deploy_target != 'pi'
 
     - name: Ensure dependencies are installed.
-      apt: name={{ item }} state=present
-      with_items:
-        - sudo
-        - openssh-server
+      apt:
+        name:
+          - sudo
+          - openssh-server
+        state: present
 
     - import_tasks: tasks/cgroup-features.yml
     - import_tasks: tasks/disable-swap.yml
