--- a/vars/main.yml
+++ b/vars/main.yml
@@ -48,6 +48,10 @@ kubernetes_packages:
   - name: kubernetes-cni
     state: present
 
+# Swap configuration.
+swap_file_state: absent
+swap_file_path: /dev/mapper/packer--debian--9--amd64--vg-swap_1
+
 # See: https://github.com/docker-library/mysql/issues/318
 mysql_container_image: hypriot/rpi-mysql:5.5
 default_http_backend_image: gcr.io/google_containers/defaultbackend-arm:1.4
