--- a/testing/vagrant/Vagrantfile
+++ b/testing/vagrant/Vagrantfile
@@ -39,6 +39,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
       # Provision all the VMs using Ansible after last VM is up.
       if opts[:name] == "kube5"
         config.vm.provision "ansible" do |ansible|
+          ansible.compatibility_mode = "2.0"
           ansible.playbook = "../../main.yml"
           ansible.inventory_path = "inventory"
           ansible.limit = "all"
