--- a/roles/docker-arm/tasks/main.yml
+++ b/roles/docker-arm/tasks/main.yml
@@ -14,6 +14,8 @@
 
 - name: Run Docker install convenience script.
   command: /tmp/get-docker.sh
+  environment:
+    CHANNEL: stable
   when: docker_command_result.rc == 1
 
 - name: Make sure Docker CE is the version specified.
