--- a/testing/vagrant/ansible.cfg
+++ b/testing/vagrant/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
-roles_path = ../../roles
+roles_path = ./roles
 nocows = 1
+inventory = inventory
 forks = 10
 retry_files_enabled = False
 stdout_callback = yaml
