Issue #127: Flush handlers so NFS exports and mounts work on provision.

--- a/tasks/nfs.yml
+++ b/tasks/nfs.yml
@@ -24,6 +24,9 @@
     - "{{ nfs_share_dir }}"
     - "{{ nfs_mount_dir }}"
 
+- name: Flush handlers so NFS mounts are exported.
+  meta: flush_handlers
+
 # Mount configuration.
 - name: Ensure the NFS volume is mounted.
   mount:
