Issue #127: Fix breaking docker-in-docker test with Docker 18.09 shim.

--- a/main.yml
+++ b/main.yml
@@ -31,7 +31,7 @@
 
     - role: geerlingguy.swap
       tags: ['always', 'swap']
-      when: deploy_target != 'pi'
+      when: deploy_target == 'vagrant'
 
     - role: geerlingguy.nfs
       tags: ['nfs']
