--- a/roles/docker-arm/tasks/main.yml
+++ b/roles/docker-arm/tasks/main.yml
@@ -24,6 +24,10 @@
     state: present
     force: yes
 
+# TODO: Remove this shim once 18.09.1 or later is released.
+- import_tasks: docker-1809-shim.yml
+  when: ansible_service_mgr == 'systemd'
+
 - name: Ensure Docker is started.
   service:
     name: docker
