--- a/vars/main.yml
+++ b/vars/main.yml
@@ -57,8 +57,11 @@ swap_file_path: /dev/mapper/packer--debian--9--amd64--vg-swap_1
 
 # See: https://github.com/docker-library/mysql/issues/318
 mysql_container_image: hypriot/rpi-mysql:5.5
-default_http_backend_image: gcr.io/google_containers/defaultbackend-arm:1.4
-mysql_node_affinity_hostname: kube5
+
+# Image to use for the metrics-server deployment.
+metrics_server_image: gcr.io/google_containers/metrics-server-arm:v0.3.1
+metrics_server_command:
+  - /metrics-server
 
 # NFS configuration.
 nfs_share_dir: /srv/nfs
