--- a/k8s-manifests/kube-system/metrics-server-deployment.yaml
+++ b/k8s-manifests/kube-system/metrics-server-deployment.yaml
@@ -1,6 +1,6 @@
 # Overridden version of deploy/1.8+/metrics-server-deployment.yaml from
 # kubernetes-incubator/metrics-server so we can control the container image and
-# command.
+# command. See: https://github.com/geerlingguy/raspberry-pi-dramble/issues/128
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -38,4 +38,6 @@ spec:
         - name: tmp-dir
           mountPath: /tmp
         command:
-        {{ metrics_server_command | to_nice_yaml | indent(8, False) }}
+        - /metrics-server
+        - --kubelet-insecure-tls
+        - --kubelet-preferred-address-types=InternalIP
