Fixes #132: Allow for flexible number of nodes.

--- a/k8s-manifests/docker-registry/docker-registry.yml
+++ b/k8s-manifests/docker-registry/docker-registry.yml
@@ -3,15 +3,15 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: docker-registry
+  name: registry
 
----
 # PersistentVolume definition for NFS mount for Docker registry.
+---
 apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: docker-registry-pv
-  namespace: docker-registry
+  namespace: registry
   labels:
     app: docker-registry
 spec:
@@ -21,14 +21,14 @@ spec:
     - ReadWriteOnce
   nfs:
     path: {{ nfs_share_dir }}/docker-registry
-    server: {{ groups.dramble[0] }}
+    server: {{ kubernetes_master_ip }}
   persistentVolumeReclaimPolicy: Recycle
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: docker-registry-pvc
-  namespace: docker-registry
+  namespace: registry
   labels:
     app: docker-registry
 spec:
@@ -37,13 +37,14 @@ spec:
   resources:
     requests:
       storage: 8Gi
----
+
 # Docker registry Deployment definition.
+---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: docker-registry
-  namespace: docker-registry
+  namespace: registry
 spec:
   replicas: 1
   selector:
@@ -74,13 +75,14 @@ spec:
         - name: docker-registry-data
           persistentVolumeClaim:
             claimName: docker-registry-pvc
----
+
 # Docker registry Service definition.
+---
 kind: Service
 apiVersion: v1
 metadata:
   name: docker-registry
-  namespace: docker-registry
+  namespace: registry
   labels:
     app: docker-registry
 spec:
@@ -90,8 +92,9 @@ spec:
   - name: http
     port: 5000
     targetPort: 5000
----
+
 # Docker registry Ingress definition.
+---
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
@@ -100,7 +103,7 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
   name: docker-registry
-  namespace: docker-registry
+  namespace: registry
 spec:
   rules:
   - host: {{ docker_registry_domain }}
