--- a/tasks/nfs.yml
+++ b/tasks/nfs.yml
@@ -31,7 +31,7 @@
 - name: Ensure the NFS volume is mounted.
   mount:
     name: "{{ nfs_mount_dir }}"
-    src: "{{ groups.dramble[0] }}:{{ nfs_share_dir }}"
+    src: "{{ kubernetes_master_ip }}:{{ nfs_share_dir }}"
     fstype: nfs
     opts: "noauto,x-systemd.automount,x-systemd.device-timeout=10,timeo=14"
     state: mounted
